infrastructure/base/ot-redis-operator/ot-redis-operator.network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-ot-redis-operator
  namespace: ot-redis-operator-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: ot-redis-operator-system
    ingress:
      - fromEntities:
          - kube-apiserver
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
